Basic structure of HTML with BEM classes and basic scss

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Registration</title>
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
     <header class="header">
@@ -13,14 +14,22 @@
     <main>
         <section class="registration">
             <form class="registration__form">
+                <span class="registration__form--descript">Name</span>
                 <input type="text" class="registration__form--name" id="name-input">
+                <span class="registration__form--descript">Last Name</span>
                 <input type="text" class="registration__form--lastname" id="lastname-input">
+                <span class="registration__form--descript">Email</span>
                 <input type="email" class="registration__form--email" id="email-input">
+                <span class="registration__form--descript">Password</span>
                 <input type="password" class="registration__form--pass" id="pass-input">
+                <span class="registration__form--descript">Password Confirm</span>
                 <input type="password" class="registration__form--passconfirm" id="passconfirm-input">
-                <input type="button" value="Sign Up">
+
+                <input type="button" class="registration__form--submit" id="submit-input" value="Sign Up">
             </form>
         </section>
     </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
