--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <section class="registration">
             <form class="registration__form">
                 <span class="registration__form--descript">Name</span>
-                <input type="text" class="registration__form--name" id="name-input">
+                <input type="text" class="registration__form--name registration__form--input form-input" id="name-input">
                 <span class="registration__form--descript">Last Name</span>
-                <input type="text" class="registration__form--lastname" id="lastname-input">
+                <input type="text" class="registration__form--lastname registration__form--input form-input" id="lastname-input">
                 <span class="registration__form--descript">Email</span>
-                <input type="email" class="registration__form--email" id="email-input">
+                <input type="email" class="registration__form--email registration__form--input form-input" id="email-input">
                 <span class="registration__form--descript">Password</span>
-                <input type="password" class="registration__form--pass" id="pass-input">
+                <input type="password" class="registration__form--pass registration__form--input form-input" id="pass-input">
                 <span class="registration__form--descript">Password Confirm</span>
-                <input type="password" class="registration__form--passconfirm" id="passconfirm-input">
+                <input type="password" class="registration__form--passconfirm registration__form--input form-input" id="passconfirm-input">
 
                 <input type="button" class="registration__form--submit" id="submit-input" value="Sign Up">
             </form>
